fixed artists margins and accordian on tablet queries

--- a/css/styles.css
+++ b/css/styles.css
@@ -582,42 +582,50 @@ body {
   /***********************************
                     ARTISTS*************
     ***********************************/
+  .artistsSection {
+    height: 100%;
+    margin-bottom: 2.5em; }
   .artists-thirdSection {
-    display: grid;
-    grid-template-rows: 4fr 4fr; }
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 30em; }
   .accordian {
-    display: grid;
+    width: 100%;
     overflow: visible;
-    margin: auto;
-    box-shadow: none;
-    margin-top: 50px;
-    margin-left: 20px; }
+    margin: 3em 0px; }
   .accordian li {
-    box-shadow: none;
-    border: none;
+    position: relative;
+    width: 100%;
     float: none;
     transition: none; }
     .accordian li .image_title {
       background: rgba(0, 0, 0, 0.5);
-      width: 600px; }
-  .accordian ul {
-    display: grid; }
+      width: 100%; }
   .accordian li img {
     display: grid;
     height: 300px;
-    width: 600px; }
+    width: 100%; }
+  .accordian ul:hover li {
+    width: 100%; }
+  .accordian ul li:hover {
+    width: 100%; }
   .section4 {
-    display: grid;
-    grid-template-rows: 5% 4fr;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     grid-row-gap: 10px; }
+    .section4__header {
+      padding-bottom: 3em;
+      padding-top: 3em; }
     .section4__boxContainer {
       display: grid;
       grid-template-rows: repeat(4, 1fr);
       grid-template-columns: repeat(2, 2fr);
-      grid-row-gap: 20px; }
+      padding-bottom: 2.5em; }
       .section4__boxContainer .subBox img {
-        height: 200px;
-        width: 200px; }
+        height: 250px;
+        width: 250px; }
   /**************************
                 ABOUT *********
     **************************/
